@@ -11,6 +11,7 @@ Emulation fixes:
  - GBA Memory: Improve gamepak prefetch timing
  - GBA SIO: Fix Multiplayer busy bit
  - GBA SIO: Fix double-unloading active driver
+ - GBA SIO: Fix copying Normal mode transfer values
  - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
  - GBA Video: Fix Hblank timing
 Other fixes:
